fix code element wrap at smaller viewports

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -397,3 +397,9 @@ article ol:first-of-type {
     width: 75%;
   }
 }
+
+@media screen and (min-width: 200px) and (max-width: 935px) {
+  code {
+    white-space: pre-wrap;
+  }
+}
